[package]
name = "yelp-scraper"
version = "0.1.0"
authors = ["Nigel Schuster <nigel.schusters@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.8", features = ["json"]}
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
tokio = {version = "0.2.22", features = ["full"] }
futures = "0.3.5"
rusoto_core = "0.45.0"
# rusoto_dynamodb = "0.45.0"
rusoto_credential = "0.45.0"
dynomite = "0.10.0"
ratelimit = "0.4.4"
lambda_runtime = "0.2.1"
log = "0.4.11"
simple-error = "0.2.2"
simple_logger = "1.9.0"
itertools = "0.9.0"