[package]
name = "yelp-shared-types"
version = "0.1.0"
authors = ["Nigel Schuster <nigel.schusters@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.116", features = ["derive"]}